feat: implement caching system with Redis integration
- Introduce a comprehensive caching system with support for entity, list, index, and counter caches.
- Implement base cache functionalities, including set, get, and delete operations.
- Add configuration options for cache behavior, including TTL and negative caching.
- Create key builder for consistent cache key generation.
- Establish connection management for Redis with health check capabilities.
- Include codec support for JSON and MessagePack serialization.
- Enhance error handling with custom error types for cache operations.
- Add tests for cache functionalities and connection management.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ coverage/
 *.cover
 cover.out
 
+
 ## Go module overrides
 vendor/
 go.work
@@ -107,3 +108,20 @@ Desktop.ini
 *.dump
 data/**/*.sql
 
+## Protect pkgs directory (never exclude any pkgs)
+!pkgs/
+!pkgs/**
+!pkgs/cache/
+!pkgs/cache/**
+!atlas/
+!atlas/**
+!enums/
+!enums/**
+!inputs/
+!inputs/**
+!modules/
+!modules/**
+!protos/
+!protos/**
+!events/
+!events/**
