chore: update .gitignore and add placeholder directories
- Extend .gitignore to include additional files and directories such as certs, ssl, and docker-compose files.
- Add new .gitkeep files in atlas/gen/enums, atlas/gen/models, and atlas/gen/views to maintain directory structure.

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,16 @@ data/**/*.sql
 !protos/**
 !events/
 !events/**
+!certs/
+!certs/**
+!ssl/
+!ssl/**
+!docker-compose.yml
+!docker-compose.dev.yml
+!go.mod
+!go.sum
+!Taskfile.yml
+!README.md
+!STRUCTURE.md
+!LICENSE
+!CONTRIBUTING.md
