--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,3 +1,5 @@
+name: nfx-id-dev
+
 services:
   #! Auth API Service (Dev)
   auth-api:
@@ -287,3 +289,157 @@ services:
           target: /app/go.sum
         - action: rebuild
           path: inputs/image/connection/Dockerfile
+
+  #! Permission API Service (Dev)
+  permission-api:
+    image: nfxid-permission-api:dev
+    container_name: NebulaID-Permission-API-Dev
+    build:
+      context: .
+      dockerfile: inputs/permission/api/Dockerfile
+      target: dev
+    environment:
+      - ENV=dev
+    command: [ "air", "-c", "inputs/permission/api/.air.toml" ]
+    develop:
+      watch:
+        - action: sync
+          path: inputs/permission/api
+          target: /app/inputs/permission/api
+        - action: sync
+          path: inputs/permission/config
+          target: /app/inputs/permission/config
+        - action: sync
+          path: modules/permission
+          target: /app/modules/permission
+        - action: sync
+          path: modules/auth
+          target: /app/modules/auth
+        - action: sync
+          path: models
+          target: /app/models
+        - action: sync
+          path: enums
+          target: /app/enums
+        - action: sync
+          path: events
+          target: /app/events
+        - action: sync
+          path: pkgs
+          target: /app/pkgs
+        - action: sync
+          path: protos
+          target: /app/protos
+        - action: sync
+          path: go.mod
+          target: /app/go.mod
+        - action: sync
+          path: go.sum
+          target: /app/go.sum
+        - action: rebuild
+          path: inputs/permission/api/Dockerfile
+    networks:
+      - nfxid
+
+  #! Permission Pipeline Service (Dev)
+  permission-pipeline:
+    image: nfxid-permission-pipeline:dev
+    container_name: NebulaID-Permission-Pipeline-Dev
+    build:
+      context: .
+      dockerfile: inputs/permission/pipeline/Dockerfile
+      target: dev
+    environment:
+      - ENV=dev
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+    command: [ "air", "-c", "inputs/permission/pipeline/.air.toml" ]
+    develop:
+      watch:
+        - action: sync
+          path: inputs/permission/pipeline
+          target: /app/inputs/permission/pipeline
+        - action: sync
+          path: inputs/permission/config
+          target: /app/inputs/permission/config
+        - action: sync
+          path: modules/permission
+          target: /app/modules/permission
+        - action: sync
+          path: modules/auth
+          target: /app/modules/auth
+        - action: sync
+          path: models
+          target: /app/models
+        - action: sync
+          path: enums
+          target: /app/enums
+        - action: sync
+          path: events
+          target: /app/events
+        - action: sync
+          path: pkgs
+          target: /app/pkgs
+        - action: sync
+          path: protos
+          target: /app/protos
+        - action: sync
+          path: go.mod
+          target: /app/go.mod
+        - action: sync
+          path: go.sum
+          target: /app/go.sum
+        - action: rebuild
+          path: inputs/permission/pipeline/Dockerfile
+    networks:
+      - nfxid
+
+  #! Permission Connection Service (Dev)
+  permission-connection:
+    image: nfxid-permission-connection:dev
+    container_name: NebulaID-Permission-Connection-Dev
+    build:
+      context: .
+      dockerfile: inputs/permission/connection/Dockerfile
+      target: dev
+    environment:
+      - ENV=dev
+    command: [ "air", "-c", "inputs/permission/connection/.air.toml" ]
+    develop:
+      watch:
+        - action: sync
+          path: inputs/permission/connection
+          target: /app/inputs/permission/connection
+        - action: sync
+          path: inputs/permission/config
+          target: /app/inputs/permission/config
+        - action: sync
+          path: modules/permission
+          target: /app/modules/permission
+        - action: sync
+          path: modules/auth
+          target: /app/modules/auth
+        - action: sync
+          path: models
+          target: /app/models
+        - action: sync
+          path: enums
+          target: /app/enums
+        - action: sync
+          path: events
+          target: /app/events
+        - action: sync
+          path: pkgs
+          target: /app/pkgs
+        - action: sync
+          path: protos
+          target: /app/protos
+        - action: sync
+          path: go.mod
+          target: /app/go.mod
+        - action: sync
+          path: go.sum
+          target: /app/go.sum
+        - action: rebuild
+          path: inputs/permission/connection/Dockerfile
+    networks:
+      - nfxid
