refactor(migrations): remove obsolete migration files and update database schema
- Deleted outdated SQL migration files for schemas and tables related to authentication, permissions, and user roles.
- Removed unnecessary tables such as "educations" and "occupations" to streamline the database structure.
- Updated configuration files to reflect new database connection settings and ensure proper service communication.
- Cleaned up migration history to maintain a clear and concise database schema evolution.

--- a/inputs/auth/config/dev.toml
+++ b/inputs/auth/config/dev.toml
@@ -5,7 +5,7 @@
     grpc_port = 10012
 
 [postgresql]
-    host = "host.docker.internal"
+    host = "192.168.1.64"
     port = 10105
     user = "postgres"
     password = "Lucas127."
@@ -25,7 +25,7 @@
         conn_max_lifetime = "1h"
 
 [mongodb]
-    host = "host.docker.internal"
+    host = "192.168.1.64"
     port = 10103
     user = "admin"
     password = "Lucas127."
@@ -40,7 +40,7 @@
         initial_backoff = "1s"
 
 [cache]
-    host = "host.docker.internal"
+    host = "192.168.1.64"
     port = 10181
     password = "Lucas127."
 
@@ -76,7 +76,7 @@
     base_path = "./data"
 
 [kafka]
-    brokers = ["host.docker.internal:10183"]
+    brokers = ["192.168.1.64:10183"]
     client_id = "nfxid-auth"
 
     [kafka.network]
@@ -128,4 +128,4 @@
     smtp_from = "sjgztea@gmail.com"
 
 [grpc_client]
-    image_addr = "localhost:10013"  # Image 服务的 gRPC 地址（Image 服务 gRPC 端口是 10013）
+    image_addr = "192.168.1.64:10013"  # Image 服务的 gRPC 地址（Image 服务 gRPC 端口是 10013）
