--- a/inputs/permission/config/prod.toml
+++ b/inputs/permission/config/prod.toml
@@ -5,8 +5,8 @@
     grpc_port = 10014
 
 [postgresql]
-    host = "postgres"
-    port = 5432
+    host = "192.168.1.64"
+    port = 10105
     user = "postgres"
     password = "Lucas127."
     dbname = "lyuauth_prod"
@@ -25,8 +25,8 @@
         conn_max_lifetime = "1h"
 
 [mongodb]
-    host = "mongodb"
-    port = 27017
+    host = "192.168.1.64"
+    port = 10103
     user = "admin"
     password = "Lucas127."
     auth_source = "admin"
@@ -40,8 +40,8 @@
         initial_backoff = "1s"
 
 [cache]
-    host = "redis"
-    port = 6379
+    host = "192.168.1.64"
+    port = 10181
     password = "Lucas127."
 
     [cache.connection]
@@ -73,7 +73,7 @@
     algorithm = "HS256"
 
 [kafka]
-    brokers = ["kafka:9092"]
+    brokers = ["192.168.1.64:10183"]
     client_id = "nfxid-permission"
 
     [kafka.network]
@@ -114,5 +114,5 @@
         tls_insecure_skip_verify = false
 
 [grpc_client]
-    auth_addr = "auth-connection:50051"  # Auth 服务的 gRPC 地址（Docker 内部网络）
+    auth_addr = "192.168.1.64:10012"  # Auth 服务的 gRPC 地址（Auth 服务 gRPC 端口是 10012）
 
