--- a/inputs/image/config/prod.toml
+++ b/inputs/image/config/prod.toml
@@ -9,7 +9,7 @@
     port = 10105
     user = "postgres"
     password = "Lucas127."
-    dbname = "lyuauth"
+    dbname = "nfxid"  # nfxid
     sslmode = "disable"
     timezone = "UTC"
     logger_level = "error"
@@ -30,7 +30,7 @@
     user = "admin"
     password = "Lucas127."
     auth_source = "admin"
-    database = "lyuauth"
+    database = "nfxid"  # nfxid
     min_pool_size = 5
     max_pool_size = 50
     connect_timeout = "5s"
