chore(.gitignore): update ignore rules for input config files
- Added rules to ignore config files in the inputs directory, while allowing example configuration files (example.toml, example.yaml, example.yml) to be tracked.
- This change helps maintain a clean repository by excluding sensitive or environment-specific configurations.

--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,13 @@ data/**/*.sql
 !enums/**
 !inputs/
 !inputs/**
+# Ignore config files in inputs, use example.toml instead
+inputs/**/config/*.toml
+inputs/**/config/*.yaml
+inputs/**/config/*.yml
+!inputs/**/config/example.toml
+!inputs/**/config/example.yaml
+!inputs/**/config/example.yml
 !modules/
 !modules/**
 !protos/
