chore(config): update configuration setup instructions and .gitignore
- Added dev.toml and prod.toml to .gitignore to prevent tracking of environment-specific configurations.
- Updated README to reflect new instructions for copying example.toml files to service-specific config directories for both development and production environments.
- Enhanced clarity on editing configuration files with service-specific settings and database credentials.

--- a/.gitignore
+++ b/.gitignore
@@ -123,6 +123,8 @@ data/**/*.sql
 !inputs/
 !inputs/**
 # Ignore config files in inputs, use example.toml instead
+dev.toml
+prod.toml
 inputs/**/config/*.toml
 inputs/**/config/*.yaml
 inputs/**/config/*.yml
